# macrdp

./: AUDIT.md  BEFORE_RELEASE.md  Cargo.toml  Makefile  PLAN.md  README.md  README_EN.md  README_ZH.md  config.example.toml  config.zh.example.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/ironrdp-acceptor-patched/: Cargo.toml  Cargo.toml.orig
crates/ironrdp-acceptor-patched/src/: channel_connection.rs  connection.rs  credssp.rs  finalization.rs  lib.rs  util.rs
crates/ironrdp-server-gfx/: Cargo.toml  Cargo.toml.orig
crates/ironrdp-server-gfx/src/: builder.rs  capabilities.rs  display.rs  gfx.rs  handler.rs  helper.rs  lib.rs  server.rs
crates/ironrdp-server-gfx/src/encoder/: bitmap.rs  fast_path.rs  mod.rs  rfx.rs
crates/macrdp-audio/: Cargo.toml
crates/macrdp-audio/src/: converter.rs  lib.rs  local_mute.rs  opus.rs
crates/macrdp-build/: Cargo.toml
crates/macrdp-build/src/: lib.rs
crates/macrdp-capture/: Cargo.toml
crates/macrdp-capture/src/: lib.rs
crates/macrdp-clipboard/: Cargo.toml
crates/macrdp-clipboard/src/: file.rs  formats.rs  html.rs  lib.rs  pasteboard.rs  transfer.rs
crates/macrdp-core/: Cargo.toml  build.rs
crates/macrdp-core/benches/: pipeline_bench.rs
crates/macrdp-core/src/: bitrate_controller.rs  callbacks.rs  clipboard.rs  config.rs  display.rs  features.rs  handler.rs  lib.rs  log_bridge.rs  permissions.rs  server.rs  tls.rs
crates/macrdp-core/tests/: server_lifecycle.rs
crates/macrdp-encode/: Cargo.toml
crates/macrdp-encode/benches/: encode_bench.rs
crates/macrdp-encode/src/: color_convert.rs  lib.rs  openh264_enc.rs  videotoolbox.rs  yuv444_split.rs
crates/macrdp-input/: Cargo.toml
crates/macrdp-input/src/: keyboard.rs  keymap.rs  lib.rs  mouse.rs
crates/macrdp-server/: Cargo.toml
crates/macrdp-server/src/: config.rs  display.rs  handler.rs  keychain.rs  lib.rs  main.rs  perf_stats.rs
crates/macrdp-server/tests/: config_conversion.rs
docs/: RELEASE_NOTES.md  UPSTREAM_PORT.md
docs/superpowers/plans/: 2026-04-07-clipboard-audio-plan.md  2026-05-16-ui-redesign.md
docs/superpowers/specs/: 2026-04-07-clipboard-audio-design.md  2026-04-07-encode-speed-optimization-design.md  2026-05-16-ui-redesign-design.md
macrdp-ui/: build.sh  package-lock.json  package.json
macrdp-ui/src/: App.tsx
macrdp-ui/src-tauri/: tauri.conf.json
macrdp-ui/src-tauri/src/: commands.rs  database.rs  lib.rs  ui_config.rs
macrdp-ui/src/components/: AreaChart.tsx  BarChart.tsx  ChartPanel.tsx  ConnItem.tsx  EmptyState.tsx  LogEntry.tsx  MetricCard.tsx  PermissionCard.tsx  SettingRow.tsx  Sidebar.tsx  StatusBadge.tsx  StatusBar.tsx  ThemeToggle.tsx
macrdp-ui/src/contexts/: ThemeContext.tsx
macrdp-ui/src/hooks/: useFpsHistory.ts  useLogs.ts
macrdp-ui/src/lib/: types.ts
macrdp-ui/src/pages/: About.tsx  Dashboard.tsx  Logs.tsx  Permissions.tsx  Popover.tsx  Settings.tsx  Statistics.tsx
macrdp-ui/src/styles/: globals.css
packaging/launchd/: com.macrdp.daemon.plist
