[workspace]
resolver = "2"
members = [
    "crates/macrdp-server",
    "crates/macrdp-core",
    "crates/macrdp-capture",
    "crates/macrdp-input",
    "crates/macrdp-encode",
    "crates/ironrdp-acceptor-patched",
]

[patch.crates-io]
ironrdp-server = { path = "crates/ironrdp-server-gfx" }
ironrdp-acceptor = { path = "crates/ironrdp-acceptor-patched" }

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
bytes = "1"
