[workspace]
resolver = "2"
members = [
    "crates/macrdp-server",
    "crates/macrdp-core",
    "crates/macrdp-capture",
    "crates/macrdp-input",
    "crates/macrdp-encode",
    "crates/ironrdp-server-gfx",
    "crates/ironrdp-acceptor-patched",
]

[patch.crates-io]
ironrdp-server = { path = "crates/ironrdp-server-gfx" }
ironrdp-acceptor = { path = "crates/ironrdp-acceptor-patched" }

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "MIT"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
bytes = "1"
