[package]
name = "macrdp-core"
version = "0.1.0"
edition.workspace = true

[dependencies]
macrdp-capture = { path = "../macrdp-capture" }
macrdp-input = { path = "../macrdp-input" }
macrdp-encode = { path = "../macrdp-encode" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
bytes.workspace = true
ironrdp-server = { version = "0.10", features = ["helper"] }
ironrdp-displaycontrol = "0.5"
ironrdp-cliprdr = "0.5"
ironrdp-core = "0.1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rcgen = "0.13"
dirs = "6"
rand = "0.8"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "pipeline_bench"
harness = false
