[package]
name = "macrdp-server"
version = "0.1.0"
edition.workspace = true

[dependencies]
macrdp-core = { path = "../macrdp-core" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
keyring = "3"
rpassword = "7"

[build-dependencies]
macrdp-build = { path = "../macrdp-build" }

[dev-dependencies]
tempfile = "3"
toml = "0.8"
